--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,13 @@
 {
   "type": "module",
+  "scripts": {
+    "dev": "nodemon -r dotenv/config --experimental-json-modules index.js"
+  },
   "dependencies": {
-    "express": "^4.19.2"
+    "axios": "^1.7.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.4.5"
   }
 }
