--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
     "react-toastify": "^10.0.5",
-    "recharts": "^2.12.7",
+    "recharts": "^2.13.0-alpha.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
